# gs-store-system

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  PROJECT-STRUCTURE.md  README.md  deploy.bat  deploy.ps1  mock_orders.sql
backend/: ADMIN_DEVELOPMENT_PLAN.md  ADMIN_PAGE_TASKS.md  ADMIN_PRODUCT_DESIGN.md  Dockerfile.linux-build  package.json  vite.config.js
backend/migrations/: 20260420000000_add_default_sku_flag.sql  20260528000000_drop_legacy_products_table.sql  20260528000001_create_order_logistics.sql  20260610000000_create_identity_balance_tables.sql  20260610000001_extend_wechat_user_identity_no.sql
backend/scripts/: test_health_card_balance.py
backend/src/: logging.rs  main.js  main.rs  state.rs
backend/src/api/: http.js
backend/src/components/: PageCard.vue
deploy/: deploy-frontend.ps1  deploy_password.py  release.bat
deploy/nginx/: gs-store-system.conf
docs/: mobile-product-scope.md
frontend/: app.js  index.html  package-lock.json  package.json  styles.css  vite.config.js
frontend/src/: App.vue  main.js  styles.css
gs-store-system/: Cargo.toml
gs-store-system/migrations/: 20240326000000_init.sql
gs-store-system/src/: config.rs  error.rs
kb/: official-website-mvp-plan.md  product-plan.md  technical-solution.md  上海迷彩侠实业官网资料（应急稿）.docx  国家级大学生创新创业训练计划项目申报书.docx
portal-ai-frontend/: vite.config.js
scripts/: deploy.py  generate_share_covers.py
src/: app.rs  main.rs  routes.rs
src/common/: api.rs  errors.rs  mod.rs  phone.rs
src/domains/: mod.rs
src/infra/: config.rs  mod.rs  sms.rs  state.rs
(+141 files in other folders)
