[package]
name = "rust-coupled-fullstack"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
